#! /usr/bin/env bash
#########################################################################
#									#
# Script ID: srv-dev/Makefile.am					#
# Author: Copyright (C) 2016-2018  Mark Grant				#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0					#
#									#
# Purpose:								#
#	AutoMake script file to generate libswocserver-dev project from	#
# source.								#
#									#
#########################################################################

#########################################################################
#									#
# Changelog								#
#									#
# Date		Author	Version	Description				#
#									#
# 27/05/2016	MG	1.0.1	First release.				#
# 18/12/2016	MG	1.0.2	Removed swocserver.conf(5) to the	#
#				libswocserver package.			#
# 21/10/2017	MG	1.0.3	Remove validateconfig build.		#
# 12/01/2018	MG	1.0.4	Add SPDX license tags to source files.	#
# 15/01/2018	MG	1.0.5	Remove unnecessary config.h generation.	#
#									#
#########################################################################

ACLOCAL_AMFLAGS = -I m4 -I m4extra

SUBDIRS = source/man/man3/optionproc
SUBDIRS += source/progs/c/inc
SUBDIRS += source/progs/c/src/libswocserver
